Added support for Python 3.3+ and 2.6

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 # For info on tox see http://tox.readthedocs.org/
 
 [tox]
-envlist=py27,docs
+envlist=py26,py27,py33,docs
 
 [base]
 deps=
@@ -16,4 +16,4 @@ commands=
 changedir=docs
 deps={[base]deps}
 commands=
-    sphinx-build -W -b html -b doctest -d {envtmpdir}/doctrees .  {envtmpdir}/html
+    sphinx-build -b html -b doctest -d {envtmpdir}/doctrees .  {envtmpdir}/html
