--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: python
 python:
+    - "2.6"
     - "2.7"
+    - "3.3"
 python: 2.7
 env:
+    - TOX_ENV=py26
     - TOX_ENV=py27
+    - TOX_ENV=py33
     - TOX_ENV=docs
 install:
     - pip install tox
