--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,30 @@ sudo: false
 language: python
 python:
     - "2.7"
-    - "3.3"
+    - "3.4"
 python: 2.7
 env:
-    - TOX_ENV=py27
-    - TOX_ENV=py34
     - TOX_ENV=docs
+    - TOX_ENV=py27-django1.6-drf3.0
+    - TOX_ENV=py27-django1.6-drf3.1
+    - TOX_ENV=py27-django1.6-drf3.2
+    - TOX_ENV=py27-django1.7-drf3.0
+    - TOX_ENV=py27-django1.7-drf3.1
+    - TOX_ENV=py27-django1.7-drf3.2
+    - TOX_ENV=py27-django1.8-drf3.0
+    - TOX_ENV=py27-django1.8-drf3.1
+    - TOX_ENV=py27-django1.8-drf3.2
+    - TOX_ENV=py34-django1.6-drf3.0
+    - TOX_ENV=py34-django1.6-drf3.1
+    - TOX_ENV=py34-django1.6-drf3.2
+    - TOX_ENV=py34-django1.7-drf3.0
+    - TOX_ENV=py34-django1.7-drf3.1
+    - TOX_ENV=py34-django1.7-drf3.2
+    - TOX_ENV=py34-django1.8-drf3.0
+    - TOX_ENV=py34-django1.8-drf3.1
+    - TOX_ENV=py34-django1.8-drf3.2
+matrix:
+    fast_finish: true
 install:
     - pip install tox
 script:
