Test against the latest point releases of Django/django-rest-framework
Pinning to specific versions is only going to hide inadvertent
incompatibilities with new point releases.

--- a/tox.ini
+++ b/tox.ini
@@ -9,10 +9,10 @@ envlist =
 [testenv]
 commands = {envpython} runtests.py []
 deps =
-    django1.6: Django==1.6.3
-    django1.7: Django==1.7.10
-    django1.8: Django==1.8.4
-    drf3.2: djangorestframework==3.2.2
+    django1.6: Django>=1.6,<1.7
+    django1.7: Django>=1.7,<1.8
+    django1.8: Django>=1.8,<1.9
+    drf3.2: djangorestframework>=3.2,<3.3
     -r{toxinidir}/requirements/dev.txt
 setenv =
     PYTHONDONTWRITEBYTECODE=1
