--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,9 @@
 # When updating the envlist, be sure to also update TOX_ENV in .travis.yml
 envlist =
     docs,
-    {py27,py34}-django{1.6,1.7,1.8}-drf{3.2}
+    py27-django1.6-drf3.2,
+    py27-django1.7-drf{3.2},
+    {py27,py34}-django{1.8}-drf{3.2}
 
 [testenv]
 commands = {envpython} runtests.py []
