--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,11 @@ env:
     - TOX_ENV=docs
     - TOX_ENV=py27-django1.6-drf3.2
     - TOX_ENV=py27-django1.7-drf3.2
+    - TOX_ENV=py27-django1.7-drf3.3
     - TOX_ENV=py27-django1.8-drf3.2
+    - TOX_ENV=py27-django1.8-drf3.3
     - TOX_ENV=py34-django1.8-drf3.2
+    - TOX_ENV=py34-django1.8-drf3.3
 matrix:
     fast_finish: true
 install:
