Test against Django 1.9 but allow failures
There are currently test failures when testing against Django 1.9, so
this enables testing, but marks the jobs as allowed to fail until they
are fixed.

Django 1.9 support was only added to django-rest-framework in v3.3:
https://github.com/tomchristie/django-rest-framework/commit/3d7740fbf3112696873fdaba95c105f9e6df1f18
...so unlike the other Django versions, Django 1.9 cannot be tested
against django-rest-framework v3.2.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,15 @@ env:
     - TOX_ENV=py27-django1.7-drf3.3
     - TOX_ENV=py27-django1.8-drf3.2
     - TOX_ENV=py27-django1.8-drf3.3
+    - TOX_ENV=py27-django1.9-drf3.3
     - TOX_ENV=py34-django1.8-drf3.2
     - TOX_ENV=py34-django1.8-drf3.3
+    - TOX_ENV=py34-django1.9-drf3.3
 matrix:
+    allow_failures:
+      # Remove when test failures under Django 1.9 are fixed.
+      - env: TOX_ENV=py27-django1.9-drf3.3
+      - env: TOX_ENV=py34-django1.9-drf3.3
     fast_finish: true
 install:
     - pip install tox
