--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist =
     docs,
     py27-django1.6-drf3.2,
     py27-django1.7-drf{3.2,3.3},
-    {py27,py34}-django{1.8}-drf{3.2,3.3}
+    {py27,py34}-django{1.8,1.9}-drf{3.2,3.3}
 
 [testenv]
 commands = {envpython} runtests.py []
@@ -14,6 +14,7 @@ deps =
     django1.6: Django>=1.6,<1.7
     django1.7: Django>=1.7,<1.8
     django1.8: Django>=1.8,<1.9
+    django1.9: Django>=1.9,<1.10
     drf3.2: djangorestframework>=3.2,<3.3
     drf3.3: djangorestframework>=3.3,<3.4
     -r{toxinidir}/requirements/dev.txt
