Test on Python 3.5 & update PyPI classifiers
Python 3.5 has to be installed on-demand with the current Travis images,
so we must set the base Python version to 3.5. Tox will still be able to
use the installed-by-default Python 2.7 and 3.4 for the appropriate jobs
in the test matrix.

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist =
     docs,
     py27-django1.6-drf3.2,
     py27-django1.7-drf{3.2,3.3},
-    {py27,py34}-django{1.8,1.9}-drf{3.2,3.3}
+    {py27,py34,py35}-django{1.8,1.9}-drf{3.2,3.3}
 
 [testenv]
 commands = {envpython} runtests.py []
