--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 sudo: false
 language: python
-# This only controls the version of Python used to run tox,
-# the versions used for the tests are handled by tox itself.
-python: "2.7"
+# This only controls the version of Python used to run tox, the
+# versions used for the tests are handled by tox itself. Python 3.5
+# is only installed if we explicitly request it, so we have to use
+# it as the base, so that it's available to tox. Python 2.7 and 3.4
+# are available in the Travis images by default. See:
+# https://github.com/travis-ci/travis-ci/issues/4794#issuecomment-143758799
+python: "3.5"
 env:
     - TOX_ENV=docs
     - TOX_ENV=py27-django1.6-drf3.2
@@ -14,11 +18,15 @@ env:
     - TOX_ENV=py34-django1.8-drf3.2
     - TOX_ENV=py34-django1.8-drf3.3
     - TOX_ENV=py34-django1.9-drf3.3
+    - TOX_ENV=py35-django1.8-drf3.2
+    - TOX_ENV=py35-django1.8-drf3.3
+    - TOX_ENV=py35-django1.9-drf3.3
 matrix:
     allow_failures:
       # Remove when test failures under Django 1.9 are fixed.
       - env: TOX_ENV=py27-django1.9-drf3.3
       - env: TOX_ENV=py34-django1.9-drf3.3
+      - env: TOX_ENV=py35-django1.9-drf3.3
     fast_finish: true
 install:
     - pip install tox
