--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,9 @@ envlist =
     docs,
     py27-django1.6-drf3.2,
     py27-django1.7-drf{3.2,3.3},
-    {py27,py34,py35}-django{1.8,1.9}-drf{3.2,3.3}
+    {py27,py34,py35}-django1.8-drf{3.2,3.3}
+    # Django 1.9 requires DRF >= 3.3
+    {py27,py34,py35}-django1.9-drf3.3
 
 [testenv]
 commands = {envpython} runtests.py []
