--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,4 @@
-# For info on tox see http://tox.readthedocs.org/
+# For info on tox see https://tox.readthedocs.io/
 
 [tox]
 # When updating the envlist, be sure to also update TOX_ENV in .travis.yml
