--- a/tox.ini
+++ b/tox.ini
@@ -4,17 +4,15 @@
 # When updating the envlist, be sure to also update TOX_ENV in .travis.yml
 envlist =
     docs,
-    {py27,py34,py35}-django1.8-drf{3.2,3.3}
-    # Django 1.9 requires DRF >= 3.3
-    {py27,py34,py35}-django1.9-drf3.3
+    py{27,34,35}-django{1.8,1.9}-drf{3.4,3.5},
 
 [testenv]
 commands = {envpython} runtests.py []
 deps =
     django1.8: Django>=1.8,<1.9
     django1.9: Django>=1.9,<1.10
-    drf3.2: djangorestframework>=3.2,<3.3
-    drf3.3: djangorestframework>=3.3,<3.4
+    drf3.4: djangorestframework>=3.4,<3.5
+    drf3.5: djangorestframework>=3.5,<3.6
     -r{toxinidir}/requirements/dev.txt
 setenv =
     PYTHONDONTWRITEBYTECODE=1
