--- a/tox.ini
+++ b/tox.ini
@@ -4,13 +4,14 @@
 # When updating the envlist, be sure to also update TOX_ENV in .travis.yml
 envlist =
     docs,
-    py{27,34,35}-django{1.8,1.9}-drf{3.4,3.5},
+    py{27,34,35}-django{1.8,1.9,1.10}-drf{3.4,3.5},
 
 [testenv]
 commands = {envpython} runtests.py []
 deps =
     django1.8: Django>=1.8,<1.9
     django1.9: Django>=1.9,<1.10
+    django1.10: Django>=1.10,<1.11
     drf3.4: djangorestframework>=3.4,<3.5
     drf3.5: djangorestframework>=3.5,<3.6
     -r{toxinidir}/requirements/dev.txt
