--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ env:
     - TOX_ENV=py27-django1.9-drf3.5
     - TOX_ENV=py27-django1.10-drf3.4
     - TOX_ENV=py27-django1.10-drf3.5
+    - TOX_ENV=py27-django1.11-drf3.5
 
     - TOX_ENV=py34-django1.8-drf3.4
     - TOX_ENV=py34-django1.8-drf3.5
@@ -25,6 +26,7 @@ env:
     - TOX_ENV=py34-django1.9-drf3.5
     - TOX_ENV=py34-django1.10-drf3.4
     - TOX_ENV=py34-django1.10-drf3.5
+    - TOX_ENV=py34-django1.11-drf3.5
 
     - TOX_ENV=py35-django1.8-drf3.4
     - TOX_ENV=py35-django1.8-drf3.5
@@ -32,15 +34,19 @@ env:
     - TOX_ENV=py35-django1.9-drf3.5
     - TOX_ENV=py35-django1.10-drf3.4
     - TOX_ENV=py35-django1.10-drf3.5
+    - TOX_ENV=py35-django1.11-drf3.5
 matrix:
   allow_failures:
     # Tests currently fail under Django 1.10+ (see #30).
     - env: TOX_ENV=py27-django1.10-drf3.4
     - env: TOX_ENV=py27-django1.10-drf3.5
+    - env: TOX_ENV=py27-django1.11-drf3.5
     - env: TOX_ENV=py34-django1.10-drf3.4
     - env: TOX_ENV=py34-django1.10-drf3.5
+    - env: TOX_ENV=py34-django1.11-drf3.5
     - env: TOX_ENV=py35-django1.10-drf3.4
     - env: TOX_ENV=py35-django1.10-drf3.5
+    - env: TOX_ENV=py35-django1.11-drf3.5
   fast_finish: true
 install:
     - pip install tox
