--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,8 @@
 envlist =
     docs,
     py{27,34,35}-django{1.8,1.9,1.10}-drf{3.4,3.5},
+    # Django 1.11+ is only supported as of django-rest-framework 3.5.
+    py{27,34,35}-django1.11-drf3.5,
 
 [testenv]
 commands = {envpython} runtests.py []
@@ -12,6 +14,7 @@ deps =
     django1.8: Django>=1.8,<1.9
     django1.9: Django>=1.9,<1.10
     django1.10: Django>=1.10,<1.11
+    django1.11: Django>=1.11a1,<2.0
     drf3.4: djangorestframework>=3.4,<3.5
     drf3.5: djangorestframework>=3.5,<3.6
     -r{toxinidir}/requirements/dev.txt
