--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,8 @@ envlist =
     py{27,34,35}-django{1.8,1.9,1.10}-drf{3.4,3.5},
     # Django 1.11+ is only supported as of django-rest-framework 3.5.
     py{27,34,35}-django1.11-drf3.5,
+    # Django master dropped support for Python <3.5.
+    py35-djangomaster-drf3.5,
 
 [testenv]
 commands = {envpython} runtests.py []
@@ -15,6 +17,7 @@ deps =
     django1.9: Django>=1.9,<1.10
     django1.10: Django>=1.10,<1.11
     django1.11: Django>=1.11a1,<2.0
+    djangomaster: https://github.com/django/django/archive/master.tar.gz
     drf3.4: djangorestframework>=3.4,<3.5
     drf3.5: djangorestframework>=3.5,<3.6
     -r{toxinidir}/requirements/dev.txt
