Test against Python 3.6 for Django versions that support it
https://docs.djangoproject.com/en/1.11/faq/install/#what-python-version-can-i-use-with-django

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,12 @@ env:
     - TOX_ENV=py35-django1.11-drf3.5
     - TOX_ENV=py35-djangomaster-drf3.5
 matrix:
+  include:
+    # Python 3.6 has to be specified explicitly since it's not installed by default.
+    - python: 3.6
+      env: TOX_ENV=py36-django1.11-drf3.5
+    - python: 3.6
+      env: TOX_ENV=py36-djangomaster-drf3.5
   allow_failures:
     # Tests currently fail under Django 1.10+ (see #30).
     - env: TOX_ENV=py27-django1.10-drf3.4
@@ -48,8 +54,12 @@ matrix:
     - env: TOX_ENV=py35-django1.10-drf3.4
     - env: TOX_ENV=py35-django1.10-drf3.5
     - env: TOX_ENV=py35-django1.11-drf3.5
+    - python: 3.6
+      env: TOX_ENV=py36-django1.11-drf3.5
     # Django master is allowed to fail.
     - env: TOX_ENV=py35-djangomaster-drf3.5
+    - python: 3.6
+      env: TOX_ENV=py36-djangomaster-drf3.5
   fast_finish: true
 install:
     - pip install tox
