--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,10 @@ envlist =
     docs,
     py{27,34,35}-django{1.8,1.9,1.10}-drf{3.4,3.5},
     # Django 1.11+ is only supported as of django-rest-framework 3.5.
-    py{27,34,35}-django1.11-drf3.5,
+    # Python 3.6 is only supported as of Django 1.11.
+    py{27,34,35,36}-django1.11-drf3.5,
     # Django master dropped support for Python <3.5.
-    py35-djangomaster-drf3.5,
+    py{35,36}-djangomaster-drf3.5,
 
 [testenv]
 commands = {envpython} runtests.py []
